--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,6 @@
 {
+    "include": ["src/**/*.ts"],
+    "exclude":["node_modules", "dist"],
     "compilerOptions": {
         "target": "es2016",
 
