--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "athenas-back",
   "version": "1.0.0",
   "description": "",
-  "main": "./dist/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "node ./dist/index.js",
-    "build": "tsc",
-    "dev": "nodemon",
+    "start": "node dist/index.js ",
+    "build": "rimraf ./dist && tsc",
+    "dev": "tsnd --respawn --clear src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -30,7 +30,8 @@
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "nodemon": "^3.1.7",
-    "ts-node": "^10.9.2",
+    "rimraf": "^6.0.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.2"
   }
 }
