--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "node dist/index.js ",
     "build": "rimraf ./dist && tsc",
-    "dev": "tsnd --respawn --clear src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsnd --respawn --clear src/index.ts"
   },
   "keywords": [],
   "author": "athenas-team",
